[gd_scene load_steps=3 format=3 uid="uid://cg8hnfs8b7r14"]

[ext_resource type="Script" path="res://scene/user_interface/game_interface/main_interface.gd" id="1_4poox"]
[ext_resource type="Theme" uid="uid://dbpcf5s8c2231" path="res://assets/resources/theme/main_theme.tres" id="2_krdgp"]

[node name="MainInterface" type="Node"]
script = ExtResource("1_4poox")

[node name="StageTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TopHUD" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_krdgp")
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/TopHUD"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 15

[node name="UserLabel" type="Label" parent="CanvasLayer/TopHUD/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Player Name"
uppercase = true

[node name="TimerLabel" type="Label" parent="CanvasLayer/TopHUD/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "00:00"

[node name="PauseButton" type="Button" parent="CanvasLayer/TopHUD/HBoxContainer"]
layout_mode = 2
text = "||"

[connection signal="timeout" from="StageTimer" to="." method="_on_stage_timer_timeout"]
